tests/m1/negative/private_enum_import.ax
module private_enum_import;

import m1lib.visibility;

fn main() -> i32 {
    let choice = HiddenChoice_yes;
    return 0;
}
